Actualizar URL de producción

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ MERCADO_PAGO_CLIENT_ID=5657825947610699
 MERCADO_PAGO_CLIENT_SECRET=1cgKmFgyoRtvv4sW0wzR1otNpmI2uxzU
 
 # Application URLs
-VITE_APP_URL=https://tu-dominio.com
+VITE_APP_URL=https://clubterrapesca.netlify.app
